login page added, all posts from api shown in home page

--- a/src/components/Navbar/MyNavbar.css
+++ b/src/components/Navbar/MyNavbar.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: stretch;
   gap: 2rem;
-  padding: 0 10rem;
+  padding: 0 20rem !important;
 }
 
 .site-title {
