--- a/src/components/Posts/Post/Posts.css
+++ b/src/components/Posts/Post/Posts.css
@@ -1,10 +1,9 @@
 .posts {
   width: 75rem;
-  margin: 0 auto;
 }
 .newsfeed {
   margin: 40px auto;
 }
 .newsfeedTitle {
-  padding: 0 20px 0;
+  padding: 0 5rem 0;
 }
